# toolkit

./: .gitignore  CMakeLists.txt  README.md  devenv.nix  devenv.yaml  flake.nix
include/tk/algo/: algo.h  sequence.h
include/tk/core/: error.h  iterator.h  macros.h  types.h
include/tk/ds/: list.h  vec.h
src/core/: error.c
src/ds/: list.c  vec.c
test/algo/: test_list_sequence.c  test_sequence.c
test/ds/: test_list.c  test_vec.c
